Prevent text wrap in results table cell

--- a/wp-content/themes/the-child-theme/assets/css/stiliai.css
+++ b/wp-content/themes/the-child-theme/assets/css/stiliai.css
@@ -4,7 +4,7 @@
 #site-logo img {
     padding: 1rem;
 }
-:where(.is-layout-flex) {
+.site-main .site-content :where(.is-layout-flex) {
     gap: 2rem;
 }
 .blog-entry-thumbnail {
@@ -18,6 +18,10 @@
 }
 .naujiena #right-sidebar {
     width: 100%;
+}
+.results-table > tbody > tr > td.event-date,
+.results-table > tbody > tr > td.event-file {
+    text-wrap: nowrap;
 }
 .events-table, .results-table {
     color: #5D6B6D !important;
